I started with the base

--- a/code/style.css
+++ b/code/style.css
@@ -2,3 +2,25 @@ html {
   background: #0025ff;
   color: #fff;
 }
+body 
+{background-color: rgb(0, 78, 114);
+ color: rgb(238, 220, 0);
+ 
+}
+.container 
+{
+    padding: 20px;
+}
+.header
+{
+    background-color: navy;
+    color: seashell;
+}
+.column 
+{
+    float: left;
+}
+.column-main
+{
+    
+}
