--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,41 @@
-html {
-  background: #0025ff;
-  color: #fff;
+/* HTML ELEMENTS */
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+}
+
+/* CLASSES */
+/* ID */
+
+/* RESPONSIVE SECTION */
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 768px) {
+  body {
+    background-color: aqua;
+  }
+
+  .flex-container {
+
+  }
+
+  .small-card {
+    display: none;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  body {
+    background-color: blueviolet;
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  body {
+    background-color: brown;
+  }
 }
