--- a/code/style.css
+++ b/code/style.css
@@ -1,26 +1,118 @@
-html {
-  background: #0025ff;
+body {
+  background: hsl(231, 100%, 50%);
   color: #fff;
+  min-height: 100%;
+  font-weight: 300;
+  line-height: 1.5;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
 }
-body 
-{background-color: rgb(0, 78, 114);
- color: rgb(238, 220, 0);
- 
+
+
+/* Style the header */
+header {
+  background-color: #f1f1f1;
+  padding: 20px;
+  text-align: center;
+  width: 100%;
 }
-.container 
-{
-    padding: 20px;
+footer{
+  width: 100%;
 }
-.header
-{
-    background-color: navy;
-    color: seashell;
+/* Style the top navigation bar */
+.topnav {
+  overflow: hidden;
+  background-color: #333;
 }
-.column 
-{
-    float: left;
+
+/* Style the topnav links */
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
-.column-main
-{
-    
+
+/* Change color on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Create three unequal columns that floats next to each other */
+.row {
+  display: flex;
+  padding: 0px;
+  width: 100%;
+}
+
+.column {
+  
+  padding: 0px;
+  width: 25%;
+  display: block;
+  position: relative;
+}
+.column p {
+  text-align: center;
+  margin-block-start: 0px;
+  scroll-margin-block-end: 0px;
+  position: absolute;
+  bottom: 30px;
+  right: 30px;
+  transform: translate (-50%, -50%);
+  z-index: 0;
+  color: white;
+  text-shadow: 1px 1px 2px black;  
+  max-width: 90%;
+}
+.column img{
+    display: block;
+    position: absolut;
+    width: 400px;
+    height: 400px;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+}
+
+.column h2 {
+  display: block;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font-size: 1.5em;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+  color: white;
+  text-shadow: 1px 1px 2px black; 
+}
+
+
+/* Clear floats after the columns */
+/* .row:after {
+  content: "";
+  display: table;
+  clear: both; 
+}*/ 
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column.side, .column.middle {
+    width: 100%;
+  }
+}
+
+/* Style the footer */
+.footer {
+  background-color: dodgerblue;
+  padding: 10px;
+  text-align: center;
+  width: 100%;
 }
