--- a/code/style.css
+++ b/code/style.css
@@ -1,33 +1,51 @@
+* {
+  transition-property: all;
+  transition-duration: .8s;
+  transition-timing-function: ease;
+}
+
 html {
     color: #fff;
     background-image: linear-gradient(to top right, #9FACE6, #74ebd5);
     height: 100%;
     font-family: 'Poppins', sans-serif;
-    box-sizing: border-box;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-body{
+body {
+  height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  margin: 0 100px;
+  width: 100%;
 }
 
 .header{
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
   background-color: #fff;
   color: #3d65ff;
   display: flex;
   flex-direction: row;
   align-content: center;
-  width: 80%;
-  margin: 20px;
-  padding: 20px;
-  position: fixed;
+  box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.521);
+  padding: 0 20px;
+}
+
+.header img {
+  margin: -10px -8px;
 }
 
 .header h1 {
-  font-size: 96px;
+  font-size: 85px;
   font-weight: 200;
   margin: 0;
   background: -webkit-linear-gradient(#3d65ff, #c327ff);
+  background-clip: border-box;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -38,8 +56,32 @@ body{
 }
 
 .header a:hover {
-  color: #b035ff;
+  opacity: 0.3;
 }
+
+.main-content {
+  flex: 1 0 auto;
+}
+
+.footer{
+  background-color: #fff;
+  flex-shrink: 0;
+  display: flex;
+  padding: 10px 20px 0 20px;
+  justify-content: flex-end;
+  box-shadow: 0 -6px 6px -6px rgba(0, 0, 0, 0.521);
+}
+
+.footer img {
+  width: 32px;
+  height: 32px;
+}
+
+.footer img:hover{
+  opacity: 0.3;
+}
+ 
+
 
 @font-face {
   font-family: "Bavro Regular";
@@ -47,3 +89,5 @@ body{
   font-weight: normal;
   src: local("Bavro Regular"), url("Bavro-Regular.woff") format("woff");
   }
+
+
