--- a/code/style.css
+++ b/code/style.css
@@ -6,8 +6,9 @@
 
 html {
     color: #fff;
-    background-image: linear-gradient(to top right, #9FACE6, #74ebd5);
+    background-image: linear-gradient(-25deg, #616161 0%, #96B7C4 100%);
     height: 100%;
+    background-attachment: fixed;
     font-family: 'Poppins', sans-serif;
     display: flex;
     flex-wrap: wrap;
@@ -15,61 +16,99 @@ html {
 }
 
 body {
-  height: 100%;
+  /* height: 100%; */
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 0 100px;
-  width: 100%;
+  width: 90vw;
+  max-width: 1000px;
 }
 
-.header{
+header {
   margin-top: 20px;
   display: flex;
-  justify-content: space-between;
-  background-color: #fff;
-  color: #3d65ff;
-  display: flex;
-  flex-direction: row;
-  align-content: center;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #333333;
   box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.521);
   padding: 0 20px;
+  margin-bottom: 20px;
 }
 
-.header img {
+header img {
   margin: -10px -8px;
 }
 
-.header h1 {
+header h1 {
   font-size: 85px;
   font-weight: 200;
   margin: 0;
-  background: -webkit-linear-gradient(#3d65ff, #c327ff);
+  background: -webkit-linear-gradient(#3d65ff, #a570b9);
   background-clip: border-box;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-.header a {
+header a {
   text-decoration: none;
+  color: #a570b9;
   font-weight: 100;
 }
 
-.header a:hover {
+header a:hover {
   opacity: 0.3;
 }
 
+.navbar {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
 .main-content {
-  flex: 1 0 auto;
+  overflow-x: auto;
+  width: 100%;
+
+}
+
+.big-news {
+  display: flex;
+  justify-content: center;
+  padding: 0 20px 20px 20px;
+}
+
+.big-news img {
+  width: 70%;
+  height: 70%;
+}
+
+.big-news aside {
+  background-color: #fff;
+  color: #a570b9;
+  padding: 30px;
+  font-size: medium;
+}
+
+.small-news {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.small-news img{
+ width: 25%;
+ margin-bottom: 10px;
 }
 
 .footer{
-  background-color: #fff;
+  background-color: #333333;
   flex-shrink: 0;
   display: flex;
   padding: 10px 20px 0 20px;
   justify-content: flex-end;
   box-shadow: 0 -6px 6px -6px rgba(0, 0, 0, 0.521);
+  margin-top: 20px;
 }
 
 .footer img {
@@ -81,13 +120,4 @@ body {
   opacity: 0.3;
 }
  
-
-
-@font-face {
-  font-family: "Bavro Regular";
-  font-style: normal;
-  font-weight: normal;
-  src: local("Bavro Regular"), url("Bavro-Regular.woff") format("woff");
-  }
-
 
