--- a/code/style.css
+++ b/code/style.css
@@ -1,12 +1,13 @@
 * {
   transition-property: all;
   transition-duration: .8s;
-  transition-timing-function: ease;
+  transition-timing-function: ease;  
+  text-decoration: none;
 }
 
 html {
     color: #fff;
-    background-image: linear-gradient(-25deg, #616161 0%, #96B7C4 100%);
+    background-image: linear-gradient(-25deg, #616161 0%, rgb(99, 139, 226) 100%);
     height: 100%;
     background-attachment: fixed;
     font-family: 'Poppins', sans-serif;
@@ -16,13 +17,15 @@ html {
 }
 
 body {
-  /* height: 100%; */
+  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   width: 90vw;
   max-width: 1000px;
 }
+
+/* HEADER */
 
 header {
   margin-top: 20px;
@@ -30,7 +33,7 @@ header {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: #333333;
+  background-color: #000000;
   box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.521);
   padding: 0 20px;
   margin-bottom: 20px;
@@ -44,6 +47,7 @@ header h1 {
   font-size: 85px;
   font-weight: 200;
   margin: 0;
+  padding-top: 20px;
   background: -webkit-linear-gradient(#3d65ff, #a570b9);
   background-clip: border-box;
   -webkit-background-clip: text;
@@ -55,62 +59,30 @@ header h1 a:hover{
   text-decoration: none;
 }
 
-.navbar a {
-  text-decoration: none;
-  color: rgb(165, 112, 185);
-  font-weight: 100;
-}
-
-.navbar a:hover {
-  opacity: 0.3;
-}
-
+/* NAVBAR */
 .navbar {
   width: 100%;
   display: flex;
-  justify-content: space-evenly;
-}
-
-.main-content {
-  overflow-x: auto;
-  width: 100%;
-
-}
-
-.big-news {
-  display: flex;
   justify-content: center;
-  padding: 0 20px 20px 20px;
+  padding: 0 20px 15px 20px;
 }
 
-.big-news img {
-  width: 70%;
-  height: 70%;
+
+/* MAIN */
+.main-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  
+.main-content img{
+    width: 25%;
+    margin-bottom: 2%; 
 }
 
-.big-news aside {
-  background-color: #fff;
-  color: #a570b9;
-  padding: 30px;
-  font-size: medium;
-}
-
-.small-news {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 3px;
-  /* display: flex;
-  flex-wrap: wrap;
-  width: 100%; */
-}
-
-.small-news img{
- /* width: 25%;
- margin-bottom: 10px; */
-}
-
+/* FOOTER */
 .footer{
-  background-color: #333333;
+  background-color: #000000;
   flex-shrink: 0;
   display: flex;
   padding: 10px 20px 0 20px;
@@ -128,7 +100,7 @@ header h1 a:hover{
   opacity: 0.3;
 }
  
-
+/* ANIMATION NEONGLOW */
 @keyframes neonGlow {
   0% {
     text-shadow: 0 0 10px rgba(255,255,255,.8),
@@ -152,3 +124,39 @@ header h1 a:hover{
                  0 0 80px rgba(165, 112, 185);
   }
 }
+
+/* NAV BUTTONS */
+
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,800);
+
+*, *:before, *:after{
+  box-sizing: border-box;
+  }
+    button:hover{cursor: pointer}
+
+    button {
+      background: transparent; outline: none;
+      position: relative;
+      padding: 0 20px;
+      overflow: hidden;
+      border: none;
+      color: #a570b9;
+      font-family: 'Poppins', sans-serif;
+    }
+
+    /*button:before (attr data-hover)*/
+    button:hover:before{opacity: 1; transform: translate(0,0);}
+    button:before{
+      content: attr(data-hover);
+      position: absolute;
+      left: 0;
+      width: 100%;
+      opacity: 0;
+      transform: translate(-100%,0);
+      transition: all .3s ease-in-out;
+    }
+      /*button div (button text before hover)*/
+      button:hover div{opacity: 0; transform: translate(100%,0)}
+      button div{
+        transition: all .3s ease-in-out;
+      }
