--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,154 @@
-html {
-  background: #0025ff;
+body {
+  background: #FFA18D;
+  color: #FFF;
+  font-family: helvetica;
+  margin: 0;
+}
+
+h2 {
+  font-size: 30px;
+  font-weight: 32px;
+}
+
+h3 {
+  font-size: 24px;
+}
+
+h4 {
+  font-size: 36px;
+  font-weight: 100;
+  margin-top: -16px;
+}
+
+.container {
+  max-width: 1100px;
+  margin: 0 auto;
+}
+/*** HEADER ***/
+
+header {
+  background: #000000;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  padding: 0 16 px;
+}
+
+  .hamburger {
+    display: flex;
+    width: 30px;
+    height: 30px;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 24px;
+  }
+
+  .hamburger div {
+    width: 30px;
+    height: 5px;
+    background: #FFF;
+  }
+
+  header img {
+    width: 100px;
+    margin-left: 24px;
+
+  }
+
+nav {
+display: none;
+}
+
+nav a {
   color: #fff;
+  text-decoration: none;
+  margin: 16px;
+}
+
+/*** MAIN NEWS ***/
+
+.main-news {
+  padding: 50px 16px;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  max-width: 1300px;
+}
+
+.main-news img {
+  width: 100%;
+}
+
+.main-news div {
+  text-align: center;
+}
+
+/*** GRID NEWS ***/
+
+.grid-news {
+  background: #FFF;
+  color: #000000;
+  text-align: center;
+  padding: 24px;
+  
+
+}
+
+.grid-news-boxes {
+  display: flex;
+  flex-direction: wrap;
+}
+
+.grid-news a {
+background: snow;
+border: 2px solid #000;
+border-radius: 16px;
+width: 100%;
+text-decoration: none;
+color: #000000;
+box-shadow: 12px 12px 0 0 #8DFFBB;
+padding: 16px;
+margin-bottom: 32px;
+}
+
+.grid-news img {
+  width: 80%;
+}
+/*** MEDIA QUERIES***/
+
+@media (min-width: 650px) {
+header {
+  justify-content: space-between;
+}
+nav {
+  display: inline-block;
+}
+
+.hamburger {
+  display: none;
+}
+
+.main-news div {
+  text-align: left;
+}
+}
+
+@media (min-width: 900px) {
+  .main-news .container {
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+  }
+
+  .main-news img {
+    width: 50%;
+  }
+
+  .grid-news {
+    flex-direction: row;
+  }
+  .grid-news a {
+    width: 25%;
+    flex-grow: 1;
+  }
 }
