--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,39 @@
 html {
-  background: #0025ff;
+  background: #cdced1;
   color: #fff;
 }
+
+header {
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
+}
+
+.site-name {
+  display: flex;
+  align-content: center;
+  justify-content: flex-start;
+}
+
+.navbar {
+  font-size: 1vw;
+  color: rgb(51, 51, 51);
+}
+
+.img-logo {
+  
+  height: 3vw;
+  width: 3vw;
+  border: 2px solid rgb(251, 208, 215);
+  border-radius: 50px;
+}
+
+h2 {
+  font-size: 2vw;
+  color: rgb(58, 57, 57);
+}
+
+
+
+
