--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,18 @@
 html {
-  background: #0025ff;
+  background: hsl(327, 28%, 74%);
   color: #fff;
 }
+
+body {
+  /* border: 10px solid white;
+  border-radius: 30px; */
+}
+
+h1 {
+  font-family: 'Alata', sans-serif;
+  /* font-family: 'Abril Fatface', cursive; */
+  text-align: center;
+  font-size: 50px;
+}
+
+
