--- a/code/style.css
+++ b/code/style.css
@@ -40,6 +40,8 @@ font-size: 30px;
   margin: 15px;
   display: flex;
   justify-content: space-around;
+  align-items: flex-start;
+  flex-direction: row;
 }
 
 h3 {
@@ -89,5 +91,15 @@ font-family: 'Alata', sans-serif;
   img {
     width: 90%;
     float: center;
+  }
+
+  .big-news {
+    display: block;
+    border: 10px solid hsl(327, 28%, 74%);
+    border-radius: 20px;
+  }
+
+  .flex-parent {
+    display: block;
   }
 }
