--- a/code/style.css
+++ b/code/style.css
@@ -1,154 +1,191 @@
 body {
-  background: #FFA18D;
-  color: #FFF;
-  font-family: helvetica;
+  background: #000000;
+  color: white;
+  font-family: Arial;
   margin: 0;
 }
 
 h2 {
-  font-size: 30px;
-  font-weight: 32px;
+  text-align: left;
+  font-weight: lighter;
 }
 
 h3 {
-  font-size: 24px;
+  font-size: 25px;
 }
 
 h4 {
-  font-size: 36px;
-  font-weight: 100;
-  margin-top: -16px;
+  margin: 10px 22px;
+  font-size: 25px;
+}
+
+h5 {
+  margin: 10px 22px;
+  font-size: 20px;
 }
 
 .container {
-  max-width: 1100px;
+  width: 100%;
+  max-width: 100%;
   margin: 0 auto;
+  padding-right: 50px;
 }
+
 /*** HEADER ***/
 
 header {
-  background: #000000;
+  margin: 0;
+  background: white;
   height: 80px;
   display: flex;
   align-items: center;
-  padding: 0 16 px;
+  padding: 0 16px;
 }
 
-  .hamburger {
-    display: flex;
-    width: 30px;
-    height: 30px;
-    flex-direction: column;
-    justify-content: space-between;
-    margin: 24px;
-  }
-
-  .hamburger div {
-    width: 30px;
-    height: 5px;
-    background: #FFF;
-  }
-
-  header img {
-    width: 100px;
-    margin-left: 24px;
-
-  }
-
-nav {
-display: none;
-}
-
-nav a {
-  color: #fff;
-  text-decoration: none;
-  margin: 16px;
-}
-
-/*** MAIN NEWS ***/
-
-.main-news {
-  padding: 50px 16px;
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
-  max-width: 1300px;
-}
-
-.main-news img {
-  width: 100%;
-}
-
-.main-news div {
-  text-align: center;
-}
-
-/*** GRID NEWS ***/
-
-.grid-news {
-  background: #FFF;
-  color: #000000;
-  text-align: center;
-  padding: 24px;
-  
-
-}
-
-.grid-news-boxes {
-  display: flex;
-  flex-direction: wrap;
-}
-
-.grid-news a {
-background: snow;
-border: 2px solid #000;
-border-radius: 16px;
-width: 100%;
-text-decoration: none;
-color: #000000;
-box-shadow: 12px 12px 0 0 #8DFFBB;
-padding: 16px;
-margin-bottom: 32px;
-}
-
-.grid-news img {
-  width: 80%;
-}
-/*** MEDIA QUERIES***/
-
-@media (min-width: 650px) {
-header {
-  justify-content: space-between;
-}
-nav {
-  display: inline-block;
+header img {
+  width: 120px;
 }
 
 .hamburger {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  flex-direction: column;
+  justify-content: space-between;
+  border-radius: 5px;
+  margin-right: 24px;
+  position: absolute;
+  right: 0;
+}
+
+.hamburger div {
+  width: 30px;
+  height: 5px;
+  background: black;
+}
+
+nav {
   display: none;
 }
 
-.main-news div {
-  text-align: left;
+nav a {
+  color: black;
+  text-decoration: none;
+  margin-left: 16px;
+
 }
+/*** MAIN NEWS CONTAINER ***/
+
+.main-news-container .container {
+  width: 100%;
+padding-right: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.main-news-container img {
+  width: 100%;
+}
+
+.main-news-container div {
+  text-align: center;
+  margin: 20px;
+}
+
+/*** BUTTON ***/
+
+button {
+  background-color: #16681f; 
+  border: none;
+  border-radius: 5%;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 23px;
+  margin-bottom: 10px;
+}
+
+/*** GRID NEWS CONTAINER ***/
+
+.grid-news-container {
+  background: white;
+  color: #000000;
+  text-align: center;
+  padding: 24px;
+}
+
+.news-cards {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.news-cards img {
+  width: 90%;
+  margin-top: 16px;
+}
+
+.news-cards a {
+  background: snow;
+  border: 2px solid #000000;
+  border-radius: 16px;
+  width: 100%;
+  text-decoration: none;
+  color: black;
+  box-shadow: 12px 12px 0 0 #16681f;
+  margin-bottom: 32px;
+
+}
+/*** FOOTER ***/
+
+footer {
+  background: #000000;
+  color: #000000;
+}
+/*** MEDIA QUERIES ***/
+
+@media (min-width: 650px) {
+  header {
+    justify-content: space-between;
+  }
+  nav {
+  display: inline-block;
+  }
+
+  .hamburger {
+    display: none;
+  }
+
+  .main-news-container img {
+    max-width: 100%;
+    padding: 16px;
+  }
+
+  .main-news-container div {
+    text-align: left;
+  }
 }
 
 @media (min-width: 900px) {
-  .main-news .container {
-    flex-direction: row;
-    align-items: center;
-    width: 100%;
-  }
-
-  .main-news img {
-    width: 50%;
-  }
-
-  .grid-news {
-    flex-direction: row;
-  }
-  .grid-news a {
-    width: 25%;
-    flex-grow: 1;
-  }
+  .main-news-container .container {
+  margin: 20px;
+  flex-direction: row-reverse;
+  align-items: center;
+  justify-content: space-between;
 }
+
+.main-news-container img {
+  max-width: 600px;
+}
+.main-news-container div {
+  text-align: left;
+}
+
+.news-cards a {
+  width: 25%;
+  flex-grow: 1;
+  margin: 16px;
+}
+}
+
